--- a/styles/simple.css
+++ b/styles/simple.css
@@ -47,6 +47,9 @@
   
 }
 
+
+
+
 .Alternityd100 .window-content {
   height: 100%;
   padding: 5px;
@@ -94,6 +97,12 @@ form .form-group label {
   line-height: 15px
 }
 
+.combat-sidebar #combat-controls {
+  margin: 0;
+  border-top: 2px groove var(--color-border-dark-4);
+  padding-top: 4px;
+  font-size: 10px;
+}
 .combat-sidebar .combat-tracker-header h4
 {
   font-size: 14px;
@@ -107,7 +116,7 @@ form .form-group label {
 }
 
 .combat-sidebar #combat-controls a{
-  font-size: 18px;
+  font-size: 14px;
 }
 
 .Alternityd100 .window-content {
