--- a/templates/hud/token-hud.html
+++ b/templates/hud/token-hud.html
@@ -111,7 +111,7 @@
         {{console "hud/token-hud 82"}}
         {{console this}}
         {{#if canToggleCombat}}
-        <div class="control-icon {{combatClass}}" data-action="combat">
+        <div class="control-icon {{combatClass}}" data-action="d100combat">
             <img src="{{icons.combat}}" width="36" height="36" data-tooltip="{{localize "HUD.ToggleCombatState"}}"/>
         </div>
         {{/if}}
