--- a/templates/sidebar/combat-trackerB.html
+++ b/templates/sidebar/combat-trackerB.html
@@ -7,17 +7,18 @@
                 <i class="fas fa-plus"></i>
             </a>
             {{#if combatCount}}
-            <a class="combat-button combat-cycle" data-tooltip="COMBAT.EncounterPrevious"
-               {{#if previousId}}data-document-id="{{previousId}}"{{else}}disabled{{/if}}>
+            <a class="combat-button combat-cycle" data-tooltip="COMBAT.EncounterPrevious" {{#if
+                previousId}}data-document-id="{{previousId}}" {{else}}disabled{{/if}}>
                 <i class="fas fa-caret-left"></i>
             </a>
             <h4 class="encounter">{{localize "COMBAT.Encounter"}} {{currentIndex}} / {{combatCount}}</h4>
-            <a class="combat-button combat-cycle" data-tooltip="COMBAT.EncounterNext"
-               {{#if nextId}}data-document-id="{{nextId}}"{{else}}disabled{{/if}}>
+            <a class="combat-button combat-cycle" data-tooltip="COMBAT.EncounterNext" {{#if
+                nextId}}data-document-id="{{nextId}}" {{else}}disabled{{/if}}>
                 <i class="fas fa-caret-right"></i>
             </a>
             {{/if}}
-            <a class="combat-button combat-control" data-tooltip="COMBAT.Delete" data-control="endCombat" {{#unless combatCount}}disabled{{/unless}}>
+            <a class="combat-button combat-control" data-tooltip="COMBAT.Delete" data-control="endCombat" {{#unless
+                combatCount}}disabled{{/unless}}>
                 <i class="fas fa-trash"></i>
             </a>
         </nav>
@@ -25,10 +26,12 @@
 
         <div class="encounter-controls flexrow {{#if hasCombat}}combat{{/if}}">
             {{#if user.isGM}}
-            <a class="combat-button combat-control" data-tooltip="COMBAT.RollAll" data-control="rollAll" {{#unless turns}}disabled{{/unless}}>
+            <a class="combat-button combat-control" data-tooltip="COMBAT.RollAll" data-control="rollAll" {{#unless
+                turns}}disabled{{/unless}}>
                 <i class="fas fa-users"></i>
             </a>
-            <a class="combat-button combat-control" data-tooltip="COMBAT.RollNPC" data-control="rollNPC" {{#unless turns}}disabled{{/unless}}>
+            <a class="combat-button combat-control" data-tooltip="COMBAT.RollNPC" data-control="rollNPC" {{#unless
+                turns}}disabled{{/unless}}>
                 <i class="fas fa-users-cog"></i>
             </a>
             {{/if}}
@@ -50,8 +53,8 @@
                 {{#unless hasCombat}}disabled{{/unless}}>
                 <i class="fas fa-undo"></i>
             </a>
-            <a class="combat-button combat-control" data-tooltip="{{labels.scope}}"
-                data-control="toggleSceneLink" {{#unless hasCombat}}disabled{{/unless}}>
+            <a class="combat-button combat-control" data-tooltip="{{labels.scope}}" data-control="toggleSceneLink"
+                {{#unless hasCombat}}disabled{{/unless}}>
                 <i class="fas fa-{{#unless linked}}un{{/unless}}link"></i>
             </a>
             <a class="combat-button combat-settings" data-tooltip="COMBAT.Settings" data-control="trackerSettings">
@@ -60,48 +63,56 @@
             {{/if}}
         </div>
     </header>
-   
-   <!--
+
+    <!--
     [{console "CT61 - tracker"}}   
     [{console this}}
     -->
     <ol id="combat-tracker" class="directory-list">
         {{#each turns}}
         <li class="combatant actor directory-item flexrow {{this.css}}" data-combatant-id="{{this.id}}">
-            <img class="token-image" data-src="{{this.img}}" alt="{{this.name}}"/>
-            
+            <img class="token-image" data-src="{{this.img}}" alt="{{this.name}}" />
+
             <div class="token-name flexcol">
                 {{#if this.canAct}} <h4>{{this.name}} - {{this.crewmember.name}}</h4>{{/if}}
-                {{#if (not this.canAct)}} <h4 style="color:darkgoldenrod ;" >{{this.name}} - {{this.crewmember.name}}</h4>{{/if}}
+                {{#if (not this.canAct)}} <h4 style="color:darkgoldenrod ;">{{this.name}} - {{this.crewmember.name}}
+                </h4>{{/if}}
 
                 <div class="combatant-controls flexrow">
-                    
-                    <a  class="combatant-control" >
-                    <!--
+
+                    <a class="combatant-control">
+                        <!--
                     [{console "CT74 - turns"}}   
                     [[console this]}
                     -->
-                    {{#if this.down}} 
-                        <img class="combatant-control active" data-tooltip="Roll Stun recovery check: <br> Stunned Round {{this.downround}}" data-control="rollPhysire"src="systems/Alternityd100/icons/conditions/physical_resolve.webp"/>
+                        {{#if this.down}}
+                        <img class="combatant-control active"
+                            data-tooltip="Roll Stun recovery check: <br> Stunned Round {{this.downround}}"
+                            data-control="rollPhysire"
+                            src="systems/Alternityd100/icons/conditions/physical_resolve.webp" />
                         {{/if}}
-                        {{#if (not this.down) }} 
-                        <img class="combatant-control active" data-tooltip="Roll Stun recovery check" data-control="rollPhysire"src="systems/Alternityd100/icons/conditions/physical_resolve.webp"/>
+                        {{#if (not this.down) }}
+                        <img class="combatant-control active" data-tooltip="Roll Stun recovery check"
+                            data-control="rollPhysire"
+                            src="systems/Alternityd100/icons/conditions/physical_resolve.webp" />
                         {{/if}}
 
                     </a>
 
                     {{#if this.isPilot}}
-                    <a  class="combatant-control active"  >
-                    
-                        <img class="combatant-control" src="{{this.image}}"/>
+                    <a class="combatant-control active">
+
+                        <img class="combatant-control" src="{{this.image}}" />
 
                     </a>
                     {{/if}}
                     {{#if ../user.isGM}}
-                    <a class="combatant-control {{#if this.hidden}}active{{/if}}" data-tooltip="COMBAT.ToggleVis" data-control="toggleHidden">
+                    <a class="combatant-control {{#if this.hidden}}active{{/if}}" data-tooltip="COMBAT.ToggleVis"
+                        data-control="toggleHidden">
                         <i class="fas fa-eye-slash"></i>
                     </a>
-                    <a class="combatant-control {{#if this.defeated}}active{{/if}}" data-tooltip="COMBAT.ToggleDead" data-control="toggleDefeated">
+                    <a class="combatant-control {{#if this.defeated}}active{{/if}}" data-tooltip="COMBAT.ToggleDead"
+                        data-control="toggleDefeated">
                         <i class="fas fa-skull"></i>
                     </a>
                     {{/if}}
@@ -112,12 +123,12 @@
                     {{/if}}
                     <div class="token-effects">
                         {{#each this.effects}}
-                        <img class="token-effect" src="{{this}}"/>
+                        <img class="token-effect" src="{{this}}" />
                         {{/each}}
                     </div>
                 </div>
             </div>
-<!--  console "------combat-tracker 100-----"}}
+            <!--  console "------combat-tracker 100-----"}}
 console this-->
             <div class="token-resource">
                 <span class="resource">{{this.actions}}/{{this.apr}}</span>
@@ -129,52 +140,75 @@ console this-->
                 {{#if this.hasRolled}}
                 <span class="initiative">{{this.initiative}}</span>
                 {{else if this.owner}}
-                <a class="combatant-control roll" data-tooltip="COMBAT.InitiativeRoll" data-control="rollInitiative"></a>
+                <a class="combatant-control roll" data-tooltip="COMBAT.InitiativeRoll"
+                    data-control="rollInitiative"></a>
                 {{/if}}
             </div>
         </li>
         {{/each}}
     </ol>
 
+    {{#if (not endOfAction)}}
     <nav id="combat-controls" class="directory-footer flexrow" data-tooltip-direction="UP">
-    {{#if hasCombat}}
-        {{#if user.isGM}}
+        {{/if}}
+        {{#if endOfAction}}
+        <nav id="combat-controls2" class="directory-footer flexrow" data-tooltip-direction="UP">
+            {{/if}}
+
+            {{#if hasCombat}}
+            {{#if user.isGM}}
             {{#if inTurns}}
-            <a class="combat-control" data-tooltip="COMBAT.RoundPrev" data-control="previousRound"><i class="fas fa-step-backward"></i></a>
-            <a class="combat-control" data-tooltip="COMBAT.TurnPrev" data-control="previousTurn"><i class="fas fa-arrow-left"></i></a>
+            <a class="combat-control" data-tooltip="COMBAT.RoundPrev" data-control="previousRound"><i
+                    class="fas fa-step-backward"></i></a>
+            <a class="combat-control" data-tooltip="COMBAT.TurnPrev" data-control="previousTurn"><i
+                    class="fas fa-arrow-left"></i></a>
             <a class="combat-control center" data-control="endCombat">{{localize 'COMBAT.End'}}</a>
-            <a class="combat-control" data-tooltip="Delay" data-control="delayTurn"><i class="fas fa-arrow-down"></i></a>
-            <a class="combat-control" data-tooltip="COMBAT.TurnNext" data-control="nextTurn"><i class="fas fa-arrow-right"></i></a>
-            <a class="combat-control" data-tooltip="COMBAT.RoundNext" data-control="nextRound"><i class="fas fa-step-forward"></i></a>
+            <a class="combat-control-skip" data-tooltip="Skip" data-control="delayTurn"><i
+                    class="fas fa-arrow-down"></i></a>
+            <a class="combat-control" data-tooltip="COMBAT.TurnNext" data-control="nextTurn"><i
+                    class="fas fa-arrow-right"></i></a>
+            <a class="combat-control" data-tooltip="COMBAT.RoundNext" data-control="nextRound"><i
+                    class="fas fa-step-forward"></i></a>
             {{/if}}
             {{#if notBegun}}
             <a class="combat-control center" data-control="startCombat">{{localize 'COMBAT.Begin'}}</a>
             {{/if}}
             {{#if endOfAction}}
-            <a class="combat-control" data-tooltip="COMBAT.RoundPrev" data-control="previousRound"><i class="fas fa-step-backward"></i></a>
-            <a class="combat-control" data-tooltip="COMBAT.TurnPrev" data-control="previousTurn"><i class="fas fa-arrow-left"></i></a>
+            <a class="combat-control" data-tooltip="COMBAT.RoundPrev" data-control="previousRound"><i
+                    class="fas fa-step-backward"></i></a>
+            <a class="combat-control" data-tooltip="COMBAT.TurnPrev" data-control="previousTurn"><i
+                    class="fas fa-arrow-left"></i></a>
             <a class="combat-control center" data-tooltip="End Combat" data-control="endCombat">{{localize 'End'}}</a>
-            <a class="combat-control-update" data-control="GMUpdate">{{localize 'Update'}}</a>
-            <a class="combat-control" data-tooltip="Delay" data-control="delayTurn"><i class="fas fa-arrow-down"></i></a>
-            <a class="combat-control" data-tooltip="COMBAT.TurnNext" data-control="nextTurn"><i class="fas fa-arrow-right"></i></a>
-            <a class="combat-control" data-tooltip="COMBAT.RoundNext" data-control="nextRound"><i class="fas fa-step-forward"></i></a>
+            <a class="combat-control-update" data-control="GMUpdate">{{localize 'GM'}}</a>
+
+            <a class="combat-control" data-tooltip="COMBAT.RoundNext" data-control="nextRound"><i
+                    class="fas fa-step-forward"></i></a>
             {{/if}}
             {{#if false}}
-            <a class="combat-control" data-tooltip="COMBAT.RoundPrev" data-control="previousRound"><i class="fas fa-step-backward"></i></a>
-            <a class="combat-control" data-tooltip="COMBAT.TurnPrev" data-control="previousTurn"><i class="fas fa-arrow-left"></i></a>
-            <a class="combat-control center" data-tooltip="End Combat" data-control="endCombat"><i class="fa-regular fa-circle-xmark"></i></a>
+            <a class="combat-control" data-tooltip="COMBAT.RoundPrev" data-control="previousRound"><i
+                    class="fas fa-step-backward"></i></a>
+            <a class="combat-control" data-tooltip="COMBAT.TurnPrev" data-control="previousTurn"><i
+                    class="fas fa-arrow-left"></i></a>
+            <a class="combat-control center" data-tooltip="End Combat" data-control="endCombat"><i
+                    class="fa-regular fa-circle-xmark"></i></a>
             <a class="combat-control center" data-control="nextTurn"><i class="fas fa-pen-square"></i></a>
-            <a class="combat-control" data-tooltip="Delay" data-control="delayTurn"><i class="fas fa-arrow-down"></i></a>
-            <a class="combat-control" data-tooltip="COMBAT.TurnNext" data-control="nextTurn"><i class="fas fa-arrow-right"></i></a>
-            <a class="combat-control" data-tooltip="COMBAT.RoundNext" data-control="nextRound"><i class="fas fa-step-forward"></i></a>
+            <a class="combat-control-skip" data-tooltip="Skip" data-control="delayTurn"><i
+                    class="fas fa-arrow-down"></i></a>
+            <a class="combat-control" data-tooltip="COMBAT.TurnNext" data-control="nextTurn"><i
+                    class="fas fa-arrow-right"></i></a>
+            <a class="combat-control" data-tooltip="COMBAT.RoundNext" data-control="nextRound"><i
+                    class="fas fa-step-forward"></i></a>
             {{/if}}
 
-        {{else if control}}
-        <a class="combat-control" data-tooltip="COMBAT.TurnPrev" data-control="previousTurn"><i class="fas fa-arrow-left"></i></a>
-        <a class="combat-control center" data-control="nextTurn">{{localize 'COMBAT.TurnEnd'}}</a>
-        <a class="combat-control" data-tooltip="Delay" data-control="delayTurn"><i class="fas fa-arrow-down"></i></a>
-        <a class="combat-control" data-tooltip="COMBAT.TurnNext" data-control="nextTurn"><i class="fas fa-arrow-right"></i></a>
-        {{/if}}
-    {{/if}}
-    </nav>
+            {{else if control}}
+            <a class="combat-control" data-tooltip="COMBAT.TurnPrev" data-control="previousTurn"><i
+                    class="fas fa-arrow-left"></i></a>
+            <a class="combat-control center" data-control="nextTurn">{{localize 'COMBAT.TurnEnd'}}</a>
+            <a class="combat-control-skip" data-tooltip="Skip" data-control="delayTurn"><i
+                    class="fas fa-arrow-down"></i></a>
+            <a class="combat-control" data-tooltip="COMBAT.TurnNext" data-control="nextTurn"><i
+                    class="fas fa-arrow-right"></i></a>
+            {{/if}}
+            {{/if}}
+        </nav>
 </section>
