--- a/templates/actors/starship-sheet-full.html
+++ b/templates/actors/starship-sheet-full.html
@@ -923,7 +923,11 @@
                             </a>
                         </div>
                         <div class="crew-controls">
-                            <a class="crew-control crew-delete" title="Remove Crew Member"><i
+                            <a class="crew-control crew-combat" data-tooltip = "Add to Combat"><i
+                               class="fas fa-shield"></i></a>
+                        </div>    
+                        <div class="crew-controls">
+                            <a class="crew-control crew-delete" data-tooltip ="Remove Crew Member"><i
                                     class="fas fa-trash"></i></a>
                         </div>
                     </li>
