--- a/templates/sidebar/combat-trackerB.html
+++ b/templates/sidebar/combat-trackerB.html
@@ -1,5 +1,5 @@
-<section class="{{cssClass}} directory flexcol" id="{{cssId}}" data-tab="{{tabName}}">
-    <header class="combat-tracker-header">
+<section class="{{cssClass}} directory flexcol" id="{{cssId}}" data-tab="{{tabName}}"   >
+    <header class="combat-tracker-header"  {{#if endOfAction}} style="box-shadow: 0 0 20px #ff0000;" {{else}} style="box-shadow: 0 0 20px #0acccc;" {{/if}}>
 
         {{#if user.isGM}}
         <nav class="encounters flexrow" aria-label="COMBAT.NavLabel">
@@ -68,7 +68,7 @@
     [{console "CT61 - tracker"}}   
     [{console this}}
     -->
-    <ol id="combat-tracker" class="directory-list">
+    <ol id="combat-tracker" class="directory-list" >
         {{#each turns}}
         <li class="combatant actor directory-item flexrow {{this.css}}" data-combatant-id="{{this.id}}">
             <img class="token-image" data-src="{{this.img}}" alt="{{this.name}}" />
