--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -268,37 +268,37 @@
     </div>
     <div class="divTableRow">
     <div class="divTableCell"style="text-align:right">Sprint</div>
-    <div class="divTableCell"><input style="width: 40px" disabled="true" type="number" name="system.attributes.speed.sprint.base" value="{{systemData.attributes.speed.sprint.base}}"/></div>
+    <div class="divTableCell"><input style="width: 40px" disabled type="number" name="system.attributes.speed.sprint.value" value="{{systemData.attributes.speed.sprint.value}}"/></div>
     <!--<div class="divTableCell"></div>-->
     </div>
     <div class="divTableRow">
         <div class="divTableCell"style="text-align:right">Run</div>
-        <div class="divTableCell"><input style="width: 40px" disabled="true" type="number" name="system.attributes.speed.run.base" value="{{systemData.attributes.speed.run.base}}"/></div>
+        <div class="divTableCell"><input style="width: 40px" disabled="true" type="number" name="system.attributes.speed.run.value" value="{{systemData.attributes.speed.run.value}}"/></div>
         <!--<div class="divTableCell"></div>-->
     </div>
     <div class="divTableRow">
         <div class="divTableCell"style="text-align:right">Walk</div>
-        <div class="divTableCell"><input style="width: 40px" disabled="true" type="number" name="system.attributes.speed.walk.base" value="{{systemData.attributes.speed.walk.base}}"/></div>
+        <div class="divTableCell"><input style="width: 40px" disabled="true" type="number" name="system.attributes.speed.walk.value" value="{{systemData.attributes.speed.walk.value}}"/></div>
         <!--<div class="divTableCell"></div>-->
     </div>
     <div class="divTableRow">
         <div class="divTableCell"style="text-align:right">Easy Swim</div>
-        <div class="divTableCell"><input style="width: 40px" disabled="true" type="number" name="system.attributes.speed.easyswim.base" value="{{systemData.attributes.speed.easyswim.base}}"/></div>
+        <div class="divTableCell"><input style="width: 40px" disabled="true" type="number" name="system.attributes.speed.easyswim.value" value="{{systemData.attributes.speed.easyswim.value}}"/></div>
         <!--<div class="divTableCell"></div>-->
     </div>
     <div class="divTableRow">
         <div class="divTableCell"style="text-align:right">Swim</div>
-        <div class="divTableCell"><input style="width:40px " disabled="true" type="number" name="system.aattributes.speed.swim.base" value="{{systemData.attributes.speed.swim.base}}"/></div>
+        <div class="divTableCell"><input style="width:40px " disabled="true" type="number" name="system.aattributes.speed.swim.value" value="{{systemData.attributes.speed.swim.value}}"/></div>
         <!--<div class="divTableCell"></div>-->
     </div>
     <div class="divTableRow">
         <div class="divTableCell"style="text-align:right">Glide</div>
-        <div class="divTableCell"><input style="width: 40px" disabled="true" type="number" name="system.attributes.speed.glide.base" value="{{systemData.attributes.speed.glide.base}}"/></div>
+        <div class="divTableCell"><input style="width: 40px" disabled="true" type="number" name="system.attributes.speed.glide.value" value="{{systemData.attributes.speed.glide.value}}"/></div>
         <!--<div class="divTableCell"></div>-->
     </div>
     <div class="divTableRow">
         <div class="divTableCell"style="text-align:right">Fly</div>
-        <div class="divTableCell"><input style="width: 40px" disabled="true" type="number" name="system.attributes.speed.fly.base" value="{{systemData.attributes.speed.fly.base}}"/></div>
+        <div class="divTableCell"><input style="width: 40px" disabled="true" type="number" name="system.attributes.speed.fly.value" value="{{systemData.attributes.speed.fly.value}}"/></div>
         <!--<div class="divTableCell"></div>-->
     </div>
     </div>
