--- a/templates/items/weapon.html
+++ b/templates/items/weapon.html
@@ -63,7 +63,7 @@
               <div class="form-group">
                 <label>{{ localize "d100A.skill" }}</label>
                 <select name="system.skill">
-                  {{ selectOptions allowableSkills selected=itemData.skill blank="" }}
+                  {{ selectOptions allowableSkills selected=itemData.skill blank="" localize=true}}
                 </select>
               </div>
 
