--- a/templates/items/parts/item-modifiers.html
+++ b/templates/items/parts/item-modifiers.html
@@ -84,7 +84,7 @@
                     {{else if (eq modifier.effectType "weapon-property-damage")}}
                         {{lookup ../config.weaponProperties modifier.valueAffected}}
                     {{else if (eq modifier.effectType "specific-speed")}}
-                        {{lookup ../../config.speeds modifier.valueAffected}}
+                        {{lookup ../config.speeds modifier.valueAffected}}
                     {{else if (eq modifier.effectType "actor-resource")}}
                         <h4>{{~modifier.valueAffected~}}</h4>
                     {{else}}
