--- a/templates/sidebar/combat-trackerB.html
+++ b/templates/sidebar/combat-trackerB.html
@@ -38,8 +38,9 @@
 
             {{#if combatCount}}
             {{#if combat.round}}
-            {{console "Com Track B 38"}}
-            {{console this}}
+          <!--  [{console "Com Track B 38"}]
+            [{console this}]
+            -->
             <h3 class="encounter-title noborder">{{localize 'COMBAT.Round'}} {{combat.current.round}}</h3>
             {{else}}
             <h3 class="encounter-title noborder">{{localize 'COMBAT.NotStarted'}}</h3>
