--- a/templates/actors/parts/actor-modifiers.html
+++ b/templates/actors/parts/actor-modifiers.html
@@ -81,8 +81,11 @@
                     </div>
 
                     <div class="item-detail modifier-mod">
+                        {{console "actor-modifiers.html 84"}}
+                        {{console modifier}}
                         {{#if (eq modifier.modifierType "constant")}}
-                        {{ellipsis (numberFormat modifier.modifier decimals=0 sign=true) 10}}
+                        <!-- [{evaluate modifier}] -->
+                        {{ellipsis (numberFormat (evaluate modifier) decimals=0 sign=true) 10}}
                         {{else}}
                         {{ellipsis modifier.modifier 12}}
                         {{/if}}
