--- a/templates/actors/ordnance-sheet-full.html
+++ b/templates/actors/ordnance-sheet-full.html
@@ -29,6 +29,7 @@
                     <input type="text" name="system.details.source" value="{{system.details.source}}" placeholder="{{localize "SFRPG.HazardSheet.Header.TypePlaceholder"}}" />
                 </li>
             </ul>
+            <button type="button" class="tag attack" id="attack" data-tooltip="{{localize "SFRPG.Attack"}}">Attack</button>
         </div>
     </header>
 
