--- a/templates/actors/starship-sheet-full.html
+++ b/templates/actors/starship-sheet-full.html
@@ -318,7 +318,7 @@
         <a class="item" data-tab="inventory">{{ localize "SFRPG.Inventory" }}</a>
         <a class="item" data-tab="actions">{{ localize "SFRPG.StarshipSheet.Tabs.Actions" }}</a>
         <a class="item" data-tab="notes">{{ localize "SFRPG.Notes" }}</a>
-        <a class="item" data-tab="features">{{ localize "d100A.Features" }}</a>
+        <a class="item" data-tab="features">{{ localize "d100A.Design" }}</a>
     </nav>
 
     <section class="sheet-body">
