--- a/templates/dialogs/attack-dialog.hbs
+++ b/templates/dialogs/attack-dialog.hbs
@@ -55,11 +55,10 @@ Done like this because selecting the 5th item is hard :-(
         <div class="form-group" data-tooltip="{{ localize "d100A.Items.Weapon.movementTooltip" }}">
           <label>{{ localize "Movement" }}</label>
           <select style="font-family: serpentine;" name="movement">
-            {{#select movement}}
-            {{#each d100A.movementType as |name movement|}}
-            <option style="font-family: serpentine;" value="{{movement}}">{{name}}</option>
-            {{/each}}
-            {{/select}}
+           
+             {{selectOptions d100A.movementType selected=movement}}
+
+
           </select>
         </div>
 
@@ -123,46 +122,35 @@ Done like this because selecting the 5th item is hard :-(
         <td>
           <div class="form-group">
             <select style="font-family: serpentine;" name="range{{id}}">
-              {{#select target.rangecat}}
-              {{#each ../d100A.itemAttack.range as |name range|}}
-              <option style="font-family: serpentine;" value="{{range}}">{{name}}</option>
-              {{/each}}
-              {{/select}}
+              {{selectOptions ../d100A.itemAttack.range selected=target.rangecat }}
+              
             </select>
           </div>
         </td>
         <td>
           <div class="form-group" >
             <select style="font-family: serpentine;" name="resistance{{id}}">
-              {{#select target.resistance}}
-              {{#each ../d100A.resistanceType as |name resistance|}}
+              {{selectOptions ../d100A.resistanceType selected=target.resistance }}
+              
 
-              <option style="font-family: serpentine;" value="{{resistance}}">{{name}}</option>
-           
-              {{/each}}
-              {{/select}}
             </select>
           </div>
         </td>
         <td>
           <div class="form-group" >
             <select style="font-family: serpentine;" name="cover{{id}}">
-              {{#select target.cover}}
-              {{#each ../d100A.coverType as |name cover|}}
-              <option style="font-family: serpentine;" value="{{cover}}">{{name}}</option>
-              {{/each}}
-              {{/select}}
+             
+               {{selectOptions ../d100A.coverType selected=target.cover }}
+
             </select>
           </div>
         </td>
         <td>
           <div class="form-group" >
             <select style="font-family: serpentine;" name="dodge{{id}}">
-              {{#select target.dodge}}
-              {{#each ../d100A.dodgeType as |name dodge|}}
-              <option style="font-family: serpentine;" value="{{dodge}}">{{name}}</option>
-              {{/each}}
-              {{/select}}
+
+               {{selectOptions ../d100A.dodgeType selected=target.dodge }} 
+              
             </select>
           </div>
         </td>
@@ -185,12 +173,10 @@ Done like this because selecting the 5th item is hard :-(
   <div class="form-group">
     <label>RollMode</label>
     <select name="rollMode" style="font-family: serpentine;">
-      {{#select rollMode}}
-      {{#each rollModes as |label mode|}}
-      <option style="font-family: serpentine;" value="{{mode}}"><span style="font-family: serpentine;">{{localize
-          label}}</span></option>
-      {{/each}}
-      {{/select}}
+     
+      {{selectOptions rollModes selected=rollMode localize=true }} 
+
+
     </select>
   </div>
   <div class="form-group">
