--- a/templates/actors/ordnance-sheet-full.html
+++ b/templates/actors/ordnance-sheet-full.html
@@ -168,7 +168,7 @@
                  
                         <label>{{ localize "d100A.Items.Ordnance.Acceleration" }}</label> 
                         <div class="form-fields">
-                            <input type="text" style="text-align: center; size: 20 px; " name="system.accel" value="{{system.accel}}" data-dtype="Number" placeholder=1 />
+                            <input type="text" style="text-align: center; size: 20 px; " name="system.basicAcceleration" value="{{system.basicAcceleration}}" data-dtype="Number" placeholder=1 />
                         </div>
                       </div>
                      <!-- **************  Warhead Details  ***************************-->
