--- a/templates/items/starshipOrdnance.html
+++ b/templates/items/starshipOrdnance.html
@@ -106,7 +106,7 @@
          
                 <label>{{ localize "d100A.Items.Ordnance.Acceleration" }}</label> 
                 <div class="form-fields">
-                    <input type="text" style="text-align: center; size: 20 px; " name="system.accel" value="{{itemData.accel}}" data-dtype="Number" placeholder=1 />
+                    <input type="text" style="text-align: center; size: 20 px; " name="system.basicAcceleration" value="{{itemData.basicAcceleration}}" data-dtype="Number" placeholder=1 />
                 </div>
               </div>
              <!-- **************  Warhead Details  ***************************-->
